--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,5 +1,5 @@
-<div class=" space-y-4 md:space-y-6 sm:p-8 section-section h-screen  ">
-   <div class="w-[450px] mx-auto shadow-2xl bg-white  my-8 p-8 rounded-xl">
+<div class=" space-y-4 md:space-y-6 sm:p-8 section-section h-screen flex items-center ">
+   <div class="lg:w-[450px] mx-auto shadow-2xl bg-white  my-8 p-8 rounded-xl">
     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
         Sign in to your account
     </h1>
